[gd_scene load_steps=14 format=3 uid="uid://gkb307hkjv4f"]

[ext_resource type="Script" path="res://src/main_menu/main_menu.gd" id="1_n7r5h"]
[ext_resource type="Theme" uid="uid://c6c2i20fohyxl" path="res://src/ui_and_themes/default_ui_theme.tres" id="2_tqg8k"]
[ext_resource type="Script" path="res://src/main_menu/time.gd" id="5_jnu6s"]
[ext_resource type="Texture2D" uid="uid://d2xko5gsjdny7" path="res://assets/UIElements/arrow2.png" id="6_0mpab"]
[ext_resource type="PackedScene" uid="uid://wg26fathbma7" path="res://src/main_menu/options/options_menu.tscn" id="7_ywl7c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_twdcm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oo7in"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_67424"]

[sub_resource type="Curve" id="Curve_22gla"]
_data = [Vector2(0, 0.010989), 0.0, 0.0, 0, 0, Vector2(0.980676, 0.978022), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_m5hqa"]
curve = SubResource("Curve_22gla")

[sub_resource type="Curve" id="Curve_vlqgk"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0.00483092, -114.725), 0.0, 0.0, 0, 0, Vector2(0.94686, 288.791), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7vxh1"]
curve = SubResource("Curve_vlqgk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6f4xo"]
lifetime_randomness = 0.52
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 60.0
angle_min = 60.0
angle_max = 240.0
angle_curve = SubResource("CurveTexture_7vxh1")
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 120.0
gravity = Vector3(0, -98, 0)
linear_accel_max = 10.0
radial_accel_max = 10.0
tangential_accel_min = 5.0
tangential_accel_max = 15.0
scale_min = 0.5
scale_max = 1.5
color = Color(1, 1, 1, 0.823529)
alpha_curve = SubResource("CurveTexture_m5hqa")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n7r5h")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 340
theme_override_styles/separator = SubResource("StyleBoxEmpty_twdcm")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 118
theme_override_styles/separator = SubResource("StyleBoxEmpty_twdcm")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(295, 190)
layout_mode = 2
expand_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_twdcm")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 118
theme_override_styles/separator = SubResource("StyleBoxEmpty_twdcm")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_tqg8k")
theme_override_font_sizes/font_size = 64
text = "temp title"

[node name="HorizontalContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HorizontalContainer"]
layout_mode = 2
theme_override_constants/margin_right = 295

[node name="VButtonsContainer" type="VBoxContainer" parent="MarginContainer/HorizontalContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HorizontalContainer/MarginContainer/VButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_twdcm")

[node name="PlayButton" type="Button" parent="MarginContainer/HorizontalContainer/MarginContainer/VButtonsContainer"]
custom_minimum_size = Vector2(400, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath(".")
theme = ExtResource("2_tqg8k")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.882353, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.831373, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.882353, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.882353, 0, 1)
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oo7in")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oo7in")
text = "start game
"
flat = true

[node name="OptionsButton" type="Button" parent="MarginContainer/HorizontalContainer/MarginContainer/VButtonsContainer"]
custom_minimum_size = Vector2(400, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../PlayButton")
theme = ExtResource("2_tqg8k")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.882353, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.831373, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.882353, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.882353, 0, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oo7in")
theme_override_styles/focus = SubResource("StyleBoxEmpty_67424")
text = "options
"

[node name="CreditsButton" type="Button" parent="MarginContainer/HorizontalContainer/MarginContainer/VButtonsContainer"]
custom_minimum_size = Vector2(400, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../OptionsButton")
theme = ExtResource("2_tqg8k")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.882353, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.831373, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.882353, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.882353, 0, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oo7in")
theme_override_styles/focus = SubResource("StyleBoxEmpty_67424")
disabled = true
text = "credits"

[node name="ExitButton" type="Button" parent="MarginContainer/HorizontalContainer/MarginContainer/VButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme = ExtResource("2_tqg8k")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.882353, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.831373, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.882353, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.882353, 0, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oo7in")
theme_override_styles/focus = SubResource("StyleBoxEmpty_67424")
text = "exit"

[node name="Effects" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1666.0
offset_top = 837.0
offset_right = 1706.0
offset_bottom = 877.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="Effects"]
amount = 9
amount_ratio = 0.5
process_material = SubResource("ParticleProcessMaterial_6f4xo")
texture = ExtResource("6_0mpab")
lifetime = 2.5
randomness = 0.6

[node name="OptionsMenu" parent="." instance=ExtResource("7_ywl7c")]
visible = false
layout_mode = 0

[node name="TimeTrial" type="Node" parent="."]
script = ExtResource("5_jnu6s")
